mType/tests/testFiles/error/error/syntaxMissingReturnType.mt
function test() {
    return 10;
}